examples/test/testpolicy6223.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6223
  namespace: namespace150
spec:
  podSelector:
    matchLabels:
      key32: value28
      key47: value30
      key43: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value47
          key1: value21
      podSelector:
        matchLabels:
          key5: value40
